@@ -541,28 +541,6 @@ div.townBox dl dd {
 	border: 1px dashed #aaa;
 }
 
-/*
-** Diff rendering
-*/
-table.diff, td.diff-otitle, td.diff-ntitle {
-	background-color: white;
-}
-td.diff-addedline {
-	background: #cfc;
-	font-size: smaller;
-}
-td.diff-deletedline {
-	background: #ffa;
-	font-size: smaller;
-}
-td.diff-context {
-	background: #eee;
-	font-size: smaller;
-}
-.diffchange {
-	color: red;
-	font-weight: bold;
-}
 
 /*
 ** keep the whitespace in front of the ^=, hides rule from konqueror
