@@ -96,6 +96,7 @@ CONTROL;
 			return;
 		}
 
+		$wgOut->addStyle( 'common/diff.css' );
 		$wgOut->setArticleFlag( false );
 		if ( ! $this->loadRevisionData() ) {
 			$t = $this->mTitle->getPrefixedText() . " (Diff: {$this->mOldid}, {$this->mNewid})";
@@ -488,10 +489,14 @@ CONTROL;
 		   $ntitle = '<span class="history-deleted">'.$ntitle.'</span>';
 		}
 		$header = "
-			<table border='0' width='98%' cellpadding='0' cellspacing='4' class='diff'>
+			<table class='diff'>
+			<col class='diff-marker' />
+			<col class='diff-content' />
+			<col class='diff-marker' />
+			<col class='diff-content' />
 			<tr>
-				<td colspan='2' width='50%' align='center' class='diff-otitle'>{$otitle}</td>
-				<td colspan='2' width='50%' align='center' class='diff-ntitle'>{$ntitle}</td>
+				<td colspan='2' class='diff-otitle'>{$otitle}</td>
+				<td colspan='2' class='diff-ntitle'>{$ntitle}</td>
 			</tr>
 		";
 
@@ -1738,17 +1743,25 @@ class TableDiffFormatter extends DiffFormatter
 
 	# HTML-escape parameter before calling this
 	function addedLine( $line ) {
-		return "<td>+</td><td class='diff-addedline'><div>{$line}</div></td>";
+		return $this->wrapLine( '+', 'diff-addedline', $line );
 	}
 
 	# HTML-escape parameter before calling this
 	function deletedLine( $line ) {
-		return "<td>-</td><td class='diff-deletedline'><div>{$line}</div></td>";
+		return $this->wrapLine( '-', 'diff-deletedline', $line );
 	}
 
 	# HTML-escape parameter before calling this
 	function contextLine( $line ) {
-		return "<td> </td><td class='diff-context'><div>{$line}</div></td>";
+		return $this->wrapLine( ' ', 'diff-context', $line );
+	}
+	
+	private function wrapLine( $marker, $class, $line ) {
+		if( $line !== '' ) {
+			// The <div> wrapper is needed for 'overflow: auto' style to scroll properly
+			$line = "<div>$line</div>";
+		}
+		return "<td class='diff-marker'>$marker</td><td class='$class'>$line</td>";
 	}
 
 	function emptyLine() {
